# Mirror-Zappy

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Makefile  README.md  index.html  mkdocs.yml  search.html  zappy_ai.py
ai/: CMakeLists.txt  index.html  zappy_ai.py
ai/architecture/: index.html
ai/src/: AIConnection.py  AITeamClass.py  Connection.py  InventoryClass.py  ParseCommand.py  PlayerState.py  README.md  SendCommand.py  Trantorian.py  TrantorianClass.py  VisionManager.py  main.cpp  mainAI.py  mainIA.py  zappy_ai.py
ai/src/fsm/: AState.py  Constant.py  FSM.py  TickManager.py
ai/src/fsm/states/: AttackState.py  EvolveState.py  FollowerState.py  GatherState.py  HelpTeamMatesState.py  JoinIncantationState.py  LeaderState.py  ReproduceState.py  SurviveState.py
ai/src/util/: BroadcastMessage.py  BroadcastMessageManager.py  IdGenerator.py  InitLogger.py  VisionManager.py  logger_config.yaml
ai/states/attack/: index.html
ai/states/evolve/: index.html
ai/states/gather/: index.html
ai/states/joinIncantation/: index.html
ai/states/reproduce/: index.html
ai/states/survive/: index.html
gui/: CMakeLists.txt  index.html
gui/architecture/: index.html
gui/audio/: index.html
gui/core/: index.html
gui/events/: index.html
gui/network/: index.html
gui/raylib/: CMakeLists.txt  Color.hpp
gui/raylib/raudio/: Audio.hpp  CMakeLists.txt  Music.hpp  Sound.hpp  Wave.cpp  Wave.hpp
gui/raylib/rcore/: BoundingBox.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Event.cpp  Event.hpp  Matrix.hpp  Ray.hpp  Rlgl.hpp  Window.cpp  Window.hpp
gui/raylib/rmath/: CMakeLists.txt  Rectangle.hpp  Vector2.hpp  Vector3.hpp
gui/raylib/rmodels/: CMakeLists.txt  Material.cpp  Material.hpp  Mesh.hpp  Model.hpp  ModelAnimation.hpp  Shader.hpp
gui/raylib/rshapes/: CMakeLists.txt  Shapes.hpp
gui/raylib/rtext/: CMakeLists.txt  Font.cpp  Font.hpp  Text.hpp
gui/raylib/rtextures/: CMakeLists.txt  Image.hpp  RenderTexture2D.hpp  Texture2D.cpp  Texture2D.hpp
gui/raylib_wrappers/: index.html
gui/rendering/: index.html
gui/src/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  Core.cpp  Core.hpp  SettingsManager.cpp  SettingsManager.hpp  main.cpp
gui/src/cli/: CMakeLists.txt  Parser.cpp  Parser.hpp
gui/src/context/: CMakeLists.txt  EventContext.hpp
gui/src/events/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.hpp  GuiEvents.hpp
gui/src/game/: CMakeLists.txt  Egg.hpp  GameModel.cpp  GameModel.hpp  ItemBag.cpp  ItemBag.hpp  NameGenerator.cpp  NameGenerator.hpp  Player.cpp  Player.hpp  SkinGenerator.cpp  SkinGenerator.hpp  Team.cpp  Team.hpp
gui/src/game/components/: AObject.hpp  CMakeLists.txt  (+9 more)
gui/src/graphics/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  FirstPerson.cpp  FirstPerson.hpp  Render.cpp  Render.hpp  Tile3D.cpp  Tile3D.hpp
gui/src/network/: CMakeLists.txt  Client.cpp  Client.hpp
gui/src/ui/: CMakeLists.txt  IUIComponent.hpp  UIManager.cpp  UIManager.hpp
gui/src/util/: DataStructures.hpp
gui/ui/: index.html
gui/world/: index.html
network/: CMakeLists.txt  index.html
network/src/: SessionManager.cpp  SessionManager.hpp
network/src/exception/: ConnectError.hpp  PollError.hpp  SocketError.hpp
network/src/socket/: BaseSocket.cpp  BaseSocket.hpp  ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp
parser/: CMakeLists.txt
parser/include/: IParseStrategy.hpp  Parser.hpp
parser/include/encapsulation/: GetoptWrapper.hpp
parser/include/parsing/: IParseStrategy.hpp  Parser.hpp
parser/include/strategy/: GUIStrategy.hpp  ServerStrategy.hpp
parser/src/encapsulation/: GetoptWrapper.cpp
parser/src/strategy/: GUIStrategy.cpp  ServerStrategy.cpp
server/: CMakeLists.txt  index.html
server/architecture/: index.html
server/core/: index.html
server/game_engine/: index.html
server/src/: Core.cpp  Core.hpp  Logger.cpp  Logger.hpp  main.cpp
server/src/command/: ACommand.hpp  Broadcast.cpp  Broadcast.hpp  CommandFactory.cpp  CommandFactory.hpp  ConnectNbr.cpp  ConnectNbr.hpp  Connect_nbr.cpp  Eject.cpp  Eject.hpp  Fork.cpp  Fork.hpp  Forward.cpp  Forward.hpp  ICommand.hpp  Incantation.cpp  Incantation.hpp  Inventory.cpp  Inventory.hpp  Left.cpp  Left.hpp  Look.cpp  Look.hpp  Right.cpp  Right.hpp  Set.cpp  Set.hpp  Take.cpp  Take.hpp  Unknown.cpp  Unknown.hpp
server/src/exception/: PollError.hpp  ToMuchCmd.hpp  TooMuchCmd.hpp
server/src/game/: Player.cpp  Player.hpp  Team.cpp  Team.hpp  World.cpp  World.hpp
server/src/guiCommand/: Bct.cpp  Bct.hpp  IGuiCommand.hpp  Mct.cpp  Mct.hpp  Msz.cpp  Msz.hpp  Pdr.cpp  Pdr.hpp  Pin.cpp  Pin.hpp  Plv.cpp  Plv.hpp  Ppo.cpp  Ppo.hpp  Sbp.cpp  Sbp.hpp  Sgt.cpp  Sgt.hpp  Sst.cpp  Sst.hpp  Tna.cpp  Tna.hpp
server/src/network/: ServerSocket.cpp  ServerSocket.hpp  SessionManager.cpp  SessionManager.hpp
server/src/util/: DataStructures.hpp
shared/: CMakeLists.txt
shared/include/encapsulation/: GetoptWrapper.hpp
shared/include/exception/: ConnectError.hpp  Exception.hpp  ParserError.hpp  ParsingError.hpp  SocketError.hpp
shared/include/network/: BaseSocket.hpp  ClientSocket.hpp  IClientSocket.hpp  ISessionManager.hpp
shared/include/parsing/: IParseStrategy.hpp  Parser.hpp
shared/include/protocol/: Commands.hpp  Emitter.hpp  Parser.hpp
shared/src/: Socket.cpp  Socket.hpp
shared/src/encapsulation/: GetoptWrapper.cpp
shared/src/exception/: Exception.cpp
shared/src/network/: BaseSocket.cpp  BaseSocket.hpp  ClientSocket.cpp  ClientSocket.hpp  Socket.cpp  Socket.hpp
shared/src/protocol/: Emitter.cpp  Parser.cpp
tests/: CMakeLists.txt  World.cpp
tests/src/: Demo.cpp
tests/src/ai/: test_AIConnection.py  test_Connection.py  test_Logger.py  test_TickManager.py  test_VisionManager.py  test_broadcast_mananger.py  test_inventory_class.py  test_main.py  test_parse_cmd.py  test_playerstate.py  test_send_cmd.py  test_trantorian.py
tests/src/gui/: Parser.cpp
tests/src/network/: SessionManager.cpp  Socket.cpp
tests/src/protocol/: ProtocolTest.cpp
tests/src/server/: Core.cpp  Player.cpp  World.cpp
(+181 files in other folders)
